fixed allow access modal overflow

--- a/frontend/src/styles/UserManage.css
+++ b/frontend/src/styles/UserManage.css
@@ -32,6 +32,7 @@
 
 .notification_contents {
   width: 400px;
+  max-width: 100%;
   height: 200px;
   display: flex;
   flex-direction: column;
